Use immutable lists.